--- a/spenot/src/App.css
+++ b/spenot/src/App.css
@@ -87,7 +87,7 @@ html, body {
   text-align: center;
 }
 
-.scrollable-container {
+.emailsendpage .scrollable-container {
   max-height: 200px; 
   overflow-y: auto; 
   padding-right: 10px; 
@@ -100,18 +100,18 @@ html, body {
 }
 /*  border: 1px solid #ccc;*/
 
-.scrollable-container ul {
+.emailsendpage .scrollable-container ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
-.scrollable-container li {
+.emailsendpage .scrollable-container li {
   padding: 8px 0;
   border-bottom: 1px solid #ddd; 
 }
 
-.scrollable-container li:last-child {
+.emailsendpage .scrollable-container li:last-child {
   border-bottom: none; 
 }
 
@@ -123,13 +123,13 @@ html, body {
 
 
 
-.megjelenoAdatok {
+.emailsendpage .megjelenoAdatok {
   display: flex;
   gap: 20px;
   font-weight: bold;
 }
 
-.hibaContainer, .letezokContainer {
+.emailsendpage .hibaContainer, .letezokContainer {
   flex: 1;
   min-width: 300px;
 }
@@ -138,17 +138,17 @@ html, body {
 
 
 
-.bottom {
+.emailsendpage .bottom {
   display: flex; 
   gap: 20px; 
   padding: 20px;
 }
 
-.bottom p {
+.emailsendpage .bottom p {
   cursor: pointer;
 }
 
-.bottom-left {
+.emailsendpage .bottom-left {
   width: 43%; 
 }
 
@@ -641,7 +641,38 @@ html, body {
 }
 
 
+.uploaddatabasepage .scrollable-container {
+  max-height: 200px; 
+  overflow-y: auto; 
+  padding-right: 10px; 
 
+  margin-top: 10px;
+  width: 100%; 
+  max-width: 580px;
+  display: block;
+  padding: 10px;
+}
+/*  border: 1px solid #ccc;*/
+
+.uploaddatabasepage .scrollable-container ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.uploaddatabasepage .scrollable-container li {
+  padding: 8px 0;
+  border-bottom: 1px solid #ddd; 
+}
+
+.uploaddatabasepage .scrollable-container li:last-child {
+  border-bottom: none; 
+}
+
+
+.uploaddatabasepage .megjelenoAdatok {
+  font-weight: bold;
+}
 
 
 
@@ -701,6 +732,8 @@ html, body {
   .uploaddatabasepage .container {
     padding: 10px;
     padding-bottom: 20px;
+    height: 92vh;
+
   }
 
   .uploaddatabasepage article {
@@ -712,15 +745,24 @@ html, body {
     font-size: 4vw;
   }
 
-  .megjelenoAdatok {
+  .uploaddatabasepage .megjelenoAdatok {
     display: flex;
     flex-direction: column;
     gap: 20px;
     font-weight: bold;
+    overflow-y: auto;
   }
 
   .hibaContainer {
     border-bottom: 1px solid white;
+  }
+
+  .uploaddatabasepage .container {
+    overflow: hidden;
+  }
+  
+  .uploaddatabasepage .scrollable-container {
+    max-height: 100px; 
   }
 
 }
@@ -742,8 +784,9 @@ html, body {
     padding: 10px 5px; 
   }
 
-  .megjelenoAdatok {
+  .uploaddatabasepage .megjelenoAdatok {
     font-size: 4vw;
+    font-weight: bold;
   }
 
 }
@@ -1419,9 +1462,9 @@ text-align: center;
   }
 
   
-.logspage article {
-  margin: 0% 1% 0% 1%;
-}
+  .logspage article {
+    margin: 0% 1% 0% 1%;
+  }
 }
 @media (max-width: 600px) {
   
